# ffts-grep

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENGINEERING_SPEC.md  FOR_YOU_KNOW_MARCUS.md  HOWTO.md  NOTICE  OPTIMIZATION.md  README.md  agent-notes.md  deploy.sh  deploy_cc.sh  progress.md  tests.json
.github/workflows/: ci.yml  memory-validation.yml  release.yml  toolchain-bump.yml
docs/: HOMEBREW-FORMULA-PLAN.md  STATE_MACHINES.md
docs/learn/: 01-introduction.md  02-core-concepts.md  03-lib_rs.md  04-error_rs.md  05-cli_rs.md  06-main_rs.md  07-db_rs.md  08-indexer_rs.md  09-search_rs.md  10-init_rs.md  11-doctor_rs.md  12-health_rs.md  13-testing.md  14-exercises-solutions.md  README.md
docs/state-machines/: 01-cli-dispatch.md  02-indexer-lifecycle.md  03-database-states.md  04-search-flow.md  05-doctor-diagnostics.md  06-init-flow.md  07-error-types.md  README.md
rust-fts5-indexer/: CHANGELOG.md  CLIPPY_PEDANTIC_DIFF_SUMMARY.md  Cargo.toml  ENGINEERING_SPEC.md  PR_REPORT.md  SELF_CRITIQUE.md  agent-notes.md  baseline-benchmarks.txt  final-benchmarks.txt
rust-fts5-indexer/.cargo/: config.toml
rust-fts5-indexer/benches/: search_bench.rs
rust-fts5-indexer/src/: cli.rs  constants.rs  db.rs  doctor.rs  error.rs  fs_utils.rs  health.rs  indexer.rs  init.rs  lib.rs  main.rs  search.rs
rust-fts5-indexer/tests/: integration.rs  logging_behavior.rs  memory_test.rs  memory_validation.rs  performance_analysis.rs  refresh_behavior.rs  release_tools.rs
scripts/: check-version-consistency.sh  release-checklist.sh  release-notes.sh
